--- a/admin/detail-disposisi.html
+++ b/admin/detail-disposisi.html
@@ -265,6 +265,11 @@
                                         <div class="col-10">
                                             <div class="card m-b-30">
                                                 <div class="card-body">
+                                                    <a href="disposisi.html">
+                                            <i class="far fa-arrow-alt-circle-left fa-2x" ></i>
+                                            <br>
+                                            </a>
+                                            <br>
                                                     <div class="form-group row">
                                                         <label for="example-number-input"class="col-sm-4
                                                         col-form-label">No. Surat</label>
@@ -319,16 +324,6 @@
                                                             <div class="col-sm-5">
                                                             </div>
                                                             <div class="col-sm-5">
-                                                            </div>
-                                                            <div class="col-md-10 offset-md-2">
-                                                                <div class="input-group mt-2">
-                                                                    <div class="custom">
-                                                                        <div class="input-group append">
-                                                                            <a href="disposisi.html">
-                                                                            <button class="btn btn-danger btn-sm" type="button">Kembali</button>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
