--- a/admin/lihat-mou.html
+++ b/admin/lihat-mou.html
@@ -256,6 +256,11 @@
                             <div class="col-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
+                                        <a href="data-arsip.html">
+                                            <i class="far fa-arrow-alt-circle-left fa-2x" ></i>
+                                            <br>
+                                            </a>
+                                            <br>
                                         <div class="form-group row">
                                             <div class="col-sm-8">
                                                 <iframe src="contoh.pdf" width="1000" height="500"></iframe>
@@ -266,19 +271,6 @@
                                                 </div>
                                                 <div class="col-sm-5">
                                                 </div>
-                                                <div class="col-md-10 offset-md-2">
-                                                    <div class="input-group mt-2">
-                                                        <div class="custom">
-                                                            <div class="input-group append">
-                                                                <a href="data-arsip-akte-perusahaan.html">
-                                                                <button class="btn btn-danger btn-sm" type="button">Kembali</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                        <!-- <div class="input-group append">
-                                            <button class="btn btn-primary" type="button">Upload</button>
-                                            </div> -->
                                         </div>
                                                     </div>
                                     </div>
