--- a/admin/surat-masuk.html
+++ b/admin/surat-masuk.html
@@ -12,6 +12,12 @@
 
     <link rel="shortcut icon" href="assets/images/favicon.ico">
 
+    <!-- DataTables -->
+        <link href="assets/plugins/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+        <link href="assets/plugins/datatables/buttons.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+        <!-- Responsive datatable examples -->
+        <link href="assets/plugins/datatables/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" /> 
+
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/plugins/animate/animate.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
@@ -265,16 +271,80 @@
                                             <div class="col-12">
                                                 <div class="card m-b-30">
                                                     <div class="card-body">
-                                                        <div class="float-left">
+                                                       
                                                             <p>
                                                                 <a href=form-add-disposisi.html>
-                                                                    <button type="button" class="btn btn-info btn-sm" id="tambah_disposisi">Tambah Disposisi</button></p>
+                                                                    <button type="button" class="btn btn-info btn-sm" id="tambah_disposisi">Tambah Disposisi</button>
                                                                 </a>
-                                                            </div>
-                                                                <!-- <table class="table"> -->
-            
-                                            <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                                            </p>
+                                                        <form action="" method=""></form>
+                                        <div class="container align-items-center">
+                                            <form action="">
+                                                <div class="row">
+                                                    <div class="form-group">
+                                                        <label for="inputMulaiTanggal" class="font-weight-bold">Mulai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputMulaiTanggal" name="mulai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
+                                                    </div>
+                                                    &nbsp&nbsp&nbsp&nbsp
+                                                    <div class="form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">Sampai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputSampaiTanggal" name="sampai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
+                                                    </div>
+                                                    <div class="col-sm-1 form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">
+                                                            <font color="white">Disetujui</font>
+                                                        </label>
+                                                        <button type="submit"
+                                                            class="btn btn-primary bt-sm">Cari</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <div id="datatable_wrapper"
+                                                                class="dataTables_wrapper dt-bootstrap4 no-footer">
+                                                                <div
+                                                                    class="row align-items-center justify-content-between">
+                                                                    <div class="col-auto py-2">
+                                                                        <div id="datatable_length"
+                                                                            class="dataTables_length d-flex align-items-center">
+                                                                            <label class="mr-3 mb-0">
+                                                                                Show
+                                                                            </label>
+                                                                            <select
+                                                                                class="custom-select custom-select-sm form-control form-control-sm"
+                                                                                name="datatable_length"
+                                                                                aria-controls="datatable">
+                                                                                <option value="10">10</option>
+                                                                                <option value="25">25</option>
+                                                                                <option value="50">50</option>
+                                                                                <option value="100">100</option>
+                                                                            </select>
+                                                                            <label class="mr-3 mb-0">
+                                                                                entries
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
 
+                                                                    <div class="col-sm-12 col-md-6">
+                                                                        <div id="datatable_filter"
+                                                                            class="dataTables_filter" align="right">
+                                                                            <label class="m-0">
+                                                                                <input type="search"
+                                                                                    class="form-control form-control-sm"
+                                                                                    placeholder="Search"
+                                                                                    aria-controls="datatable">
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="row">
+                                                                    <div class="col-sm-12">
+                                        </div>
+                                                    <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                                     <thead>
                                                                         <tr>
                                                                             <th></th>
@@ -282,9 +352,9 @@
                                                                             <th>No. Surat</th>
                                                                             <th>Tanggal Surat</th>
                                                                             <th>Asal Surat</th>
-                                                                            <th>Aksi</th>
                                                                             <th>Oleh Divisi</th>
                                                                             <th>Oleh Pimpinan</th>
+                                                                             <th>Aksi</th>
                                                                         </tr>
                                                                     </thead>
                                                                     <tbody>
@@ -294,6 +364,8 @@
                                                                             <td>SR-121</td>
                                                                             <td>1 Oktober 2021</td>
                                                                             <td>Politeknik Negeri Jember</td>
+                                                                            <td><font color="green">Dilaksanakan</font></td>
+                                                                            <td><font color="green">Disetujui</font></td>
                                                                              <td><a href=update-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -303,9 +375,6 @@
                                                                              <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
-                                                                        <td>Dilaksanakan
-                                                                        </td>
-                                                                        <td>Disetujui</td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><input type="checkbox"/></td>
@@ -313,6 +382,8 @@
                                                                             <td>SR-122</td>
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Tokopedia</td>
+                                                                            <td>-</td>
+                                                                            <td>-</td>
                                                                              <td><a href=update-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -322,9 +393,6 @@
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
-                                                                        <td>-
-                                                                        </td>
-                                                                        <td>-</td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><input type="checkbox" disabled="true" /></td>
@@ -332,6 +400,8 @@
                                                                             <td>SR-123</td>
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Lazada</td>
+                                                                            <td><font color="green">Dilaksanakan</font></td>
+                                                                            <td><font color="red">Diabaikan</font></td>
                                                                              <td><a href=update-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -339,9 +409,6 @@
                                                                             <button type="button" class="btn-danger">Hapus</button></a>&nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
-                                                                            <td>Dilaksanakan
-                                                                        </td>
-                                                                        <td>Diabaikan</td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><input type="checkbox" disabled="true" /></td>
@@ -349,7 +416,9 @@
                                                                             <td>SR-124</td>
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Shopee</td>
-                                                                             <td><a href=update-surat-masuk.html>
+                                                                            <td><font color="green">Dilaksanakan</font></td>
+                                                                            <td><font color="green">Disetujui</font></td>
+                                                                            <td><a href=update-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
                                                                         <a href=surat-masuk.html>
@@ -358,12 +427,11 @@
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
-                                                                        <td>Dilaksanakan
-                                                                        </td>
-                                                                        <td>Disetujui</td>
                                                                         </tr>
                                                                     </tbody>
                                                                 </table>
+                                                            </div>
+                                                        </div>
                                                             </div>
 
                                                         </div>
@@ -408,6 +476,25 @@
                 <script src="assets/plugins/tiny-editable/numeric-input-example.js"></script>
                 <script src="assets/plugins/tabledit/jquery.tabledit.js"></script>
                 <script src="assets/pages/edit-table.js"></script>
+
+                <!-- Required datatable js -->
+        <script src="assets/plugins/datatables/jquery.dataTables.min.js"></script>
+        <script src="assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
+        <!-- Buttons examples -->
+        <script src="assets/plugins/datatables/dataTables.buttons.min.js"></script>
+        <script src="assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
+        <script src="assets/plugins/datatables/jszip.min.js"></script>
+        <script src="assets/plugins/datatables/pdfmake.min.js"></script>
+        <script src="assets/plugins/datatables/vfs_fonts.js"></script>
+        <script src="assets/plugins/datatables/buttons.html5.min.js"></script>
+        <script src="assets/plugins/datatables/buttons.print.min.js"></script>
+        <script src="assets/plugins/datatables/buttons.colVis.min.js"></script>
+        <!-- Responsive examples -->
+        <script src="assets/plugins/datatables/dataTables.responsive.min.js"></script>
+        <script src="assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
+  
+        <!-- Datatable init js -->
+        <script src="assets/pages/datatables.init.js"></script>
 
                 <!-- App js -->
                 <script src="assets/js/app.js"></script>
