--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -327,7 +327,32 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col-md-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-folder-account"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Surat Masuk Bulan Ini</h6>
+                                            <h4 class="mb-0">2<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-folder-account"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Surat Keluar Bulan Ini</h6>
+                                            <h4 class="mb-0">2<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+
                             <div class="row">
                                 <div class="col-md-12 col-xl-8">
                                     <div class="card">
