--- a/admin/data-arsip-cv.html
+++ b/admin/data-arsip-cv.html
@@ -258,14 +258,82 @@
                             <div class="col-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
-                                        <div class="float-left">
+                                        <a href="data-arsip.html">
+                                            <i class="far fa-arrow-alt-circle-left fa-2x" ></i>
+                                            <br>
+                                            </a>
+                                            <br>
                                             <p>
                                             <a href=form-add-data-cv.html>
                                                 <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
-                                            </a>
-
+                                            </a><form action="" method=""></form>
+                                        <div class="container align-items-center">
+                                            <form action="">
+                                                <div class="row">
+                                                    <div class="form-group">
+                                                        <label for="inputMulaiTanggal" class="font-weight-bold">Mulai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputMulaiTanggal" name="mulai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
                                                     </div>
-                                                        <table class="table">
+                                                    &nbsp&nbsp&nbsp&nbsp
+                                                    <div class="form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">Sampai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputSampaiTanggal" name="sampai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
+                                                    </div>
+                                                    <div class="col-sm-1 form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">
+                                                            <font color="white">Disetujui</font>
+                                                        </label>
+                                                        <button type="submit"
+                                                            class="btn btn-primary bt-sm">Cari</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <div id="datatable_wrapper"
+                                                                class="dataTables_wrapper dt-bootstrap4 no-footer">
+                                                                <div
+                                                                    class="row align-items-center justify-content-between">
+                                                                    <div class="col-auto py-2">
+                                                                        <div id="datatable_length"
+                                                                            class="dataTables_length d-flex align-items-center">
+                                                                            <label class="mr-3 mb-0">
+                                                                                Show
+                                                                            </label>
+                                                                            <select
+                                                                                class="custom-select custom-select-sm form-control form-control-sm"
+                                                                                name="datatable_length"
+                                                                                aria-controls="datatable">
+                                                                                <option value="10">10</option>
+                                                                                <option value="25">25</option>
+                                                                                <option value="50">50</option>
+                                                                                <option value="100">100</option>
+                                                                            </select>
+                                                                            <label class="mr-3 mb-0">
+                                                                                entries
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div class="col-sm-12 col-md-6">
+                                                                        <div id="datatable_filter"
+                                                                            class="dataTables_filter" align="right">
+                                                                            <label class="m-0">
+                                                                                <input type="search"
+                                                                                    class="form-control form-control-sm"
+                                                                                    placeholder="Search"
+                                                                                    aria-controls="datatable">
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="row">
+                                                                    <div class="col-sm-12">
+                                        </div>
+                                                    <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                             <thead>
                                                                 <tr>
                                                                    
