--- a/admin/detail-surat-masuk.html
+++ b/admin/detail-surat-masuk.html
@@ -265,6 +265,10 @@
                             <div class="col-12">
                                 <div class="card ">
                                     <div class="card-body">
+                                        <a href="surat-masuk.html">
+                                            <i class="far fa-arrow-alt-circle-left fa-2x" ></i>
+                                            <br>
+                                            </a>
                                         <div class="float-left">
                                                                                                     
                                                         <div class="card m-b-30 ">
@@ -305,6 +309,20 @@
                                                 </div>
                                             </div>
 
+                                            <div class="form-group row">
+                                                <label for="example-text-input" class="col-sm-4 col-form-label">Tgl Dilaksanakan</label>
+                                                <div class="col-sm-8">
+                                                    <input class="form-control" type="text" value="6 Oktober 2021" id="example-text-input" disabled>
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group row">
+                                                <label for="example-text-input" class="col-sm-4 col-form-label">Tgl Disetujui</label>
+                                                <div class="col-sm-8">
+                                                    <input class="form-control" type="text" value="10 Oktober 2021" id="example-text-input" disabled>
+                                                </div>
+                                            </div>
+
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -335,17 +353,6 @@
                                                 </div>
                                                 <div class="col-sm-5">
                                             </div>
-                                                                <div class="col-md-10 offset-md-2">
-                                                            <div class="input-group mt-2">
-                                                                <div class="custom">
-                                                                <div class="input-group-append">
-
-                                                                <a href=surat-masuk.html>
-                                                                    <button class="btn btn-danger btn-sm" type="button">Kembali</button></a>
-                                                                </div>
-                                                            </div>
-                                                                </div>
-                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
