--- a/divisi/jenis-arsip.html
+++ b/divisi/jenis-arsip.html
@@ -238,7 +238,7 @@
                                                 <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
                                             </a>
                                     </div>
-                                            <table class="table">
+                                            <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                 <thead>
                                                     <tr>
                                                         <th>No</th>
