--- a/divisi/surat-masuk.html
+++ b/divisi/surat-masuk.html
@@ -232,10 +232,74 @@
                             <div class="col-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
-                                        <div class="float-left">
-                                            <p>
+                                        <form action="" method=""></form>
+                                        <div class="container align-items-center">
+                                            <form action="">
+                                                <div class="row">
+                                                    <div class="form-group">
+                                                        <label for="inputMulaiTanggal" class="font-weight-bold">Mulai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputMulaiTanggal" name="mulai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
                                                     </div>
-                                                        <table class="table">
+                                                    &nbsp&nbsp&nbsp&nbsp
+                                                    <div class="form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">Sampai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputSampaiTanggal" name="sampai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
+                                                    </div>
+                                                    <div class="col-sm-1 form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">
+                                                            <font color="white">Disetujui</font>
+                                                        </label>
+                                                        <button type="submit"
+                                                            class="btn btn-primary bt-sm">Cari</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <div id="datatable_wrapper"
+                                                                class="dataTables_wrapper dt-bootstrap4 no-footer">
+                                                                <div
+                                                                    class="row align-items-center justify-content-between">
+                                                                    <div class="col-auto py-2">
+                                                                        <div id="datatable_length"
+                                                                            class="dataTables_length d-flex align-items-center">
+                                                                            <label class="mr-3 mb-0">
+                                                                                Show
+                                                                            </label>
+                                                                            <select
+                                                                                class="custom-select custom-select-sm form-control form-control-sm"
+                                                                                name="datatable_length"
+                                                                                aria-controls="datatable">
+                                                                                <option value="10">10</option>
+                                                                                <option value="25">25</option>
+                                                                                <option value="50">50</option>
+                                                                                <option value="100">100</option>
+                                                                            </select>
+                                                                            <label class="mr-3 mb-0">
+                                                                                entries
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div class="col-sm-12 col-md-6">
+                                                                        <div id="datatable_filter"
+                                                                            class="dataTables_filter" align="right">
+                                                                            <label class="m-0">
+                                                                                <input type="search"
+                                                                                    class="form-control form-control-sm"
+                                                                                    placeholder="Search"
+                                                                                    aria-controls="datatable">
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="row">
+                                                                    <div class="col-sm-12">
+                                        </div>
+                                                    <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                             <thead>
                                                                 <tr>
                                                                     <th>No</th>
@@ -243,8 +307,8 @@
                                                                     <th>Tanggal Surat</th>
                                                                     <th>Tanggal Terima</th>
                                                                     <th>Asal Surat</th>
-                                                                    <th>Aksi</th>
                                                                     <th>Oleh Pimpinan</th>
+                                                                    <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
@@ -254,16 +318,16 @@
                                                                     <td>1 Oktober 2021</td>
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>Politeknik Negeri Jember</td>
-                                                                    <td><a href=#>
-                                                                    <button type="button" class="btn-info">Laksanakan</button></a>
+                                                                    <td><font color="green">Disetujui</font></td>
+                                                                    <td><a href=detail-surat-masuk.html>
+                                                                    <button type="button" class="btn-info"  disabled="true">Laksanakan</button></a>
                                                                     &nbsp
                                                                     <a href=#>
-                                                                    <button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    <button type="button" class="btn-danger" disabled="true">Abaikan</button></a>
                                                                     &nbsp
                                                                     <a href=detail-surat-masuk.html>
                                                                     <button type="button" class="btn-warning">Detail</button></a>
                                                                 </td>
-                                                                    <td>Disetujui</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td>2</td>
@@ -271,6 +335,7 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>5 Oktober 2021</td>
                                                                     <td>Tokopedia</td>
+                                                                    <td>-</td>
                                                                     <td><a href=#>
                                                                     <button type="button" class="btn-info">Laksanakan</button></a>
                                                                     &nbsp
@@ -280,7 +345,6 @@
                                                                     <a href=detail-surat-masuk.html>
                                                                     <button type="button" class="btn-warning">Detail</button></a>
                                                                 </td>
-                                                                    <td>-</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td>3</td>
@@ -288,6 +352,7 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>7 Oktober 2021</td>
                                                                     <td>Lazada</td>
+                                                                    <td><font color="red">Diabaikan</font></td>
                                                                     <td><a href=#>
                                                                     <button type="button" class="btn-info">Laksanakan</button></a>
                                                                     &nbsp
@@ -297,7 +362,6 @@
                                                                     <a href=detail-surat-masuk.html>
                                                                     <button type="button" class="btn-warning">Detail</button></a>
                                                                 </td>
-                                                                   <td>Diabaikan</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td>4</td>
@@ -305,16 +369,16 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>8 Oktober 2021</td>
                                                                     <td>Shopee</td>
+                                                                    <td><font color="green">Disetujui</font></td>
                                                                    <td><a href=#>
                                                                     <button type="button" class="btn-info">Laksanakan</button></a>
                                                                     &nbsp
                                                                     <a href=#>
-                                                                    <button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    <button type="button" class="btn-danger" disabled="true">Abaikan</button></a>
                                                                     &nbsp
                                                                     <a href=detail-surat-masuk.html>
-                                                                    <button type="button" class="btn-warning">Detail</button></a>
+                                                                    <button type="button" class="btn-warning" disabled="true">Detail</button></a>
                                                                 </td>
-                                                                    <td>Disetujui</td>
                                                                 </tr>
                                                             </tbody>
                                                         </table>
