--- a/pimpinan/dashboard.html
+++ b/pimpinan/dashboard.html
@@ -294,7 +294,34 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col-md-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-file-document-box"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Surat Masuk</h6>
+                                            <h6>Bulan Ini</h6>
+                                            <h4 class="mb-0">10<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-file-document-box"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Surat Keluar</h6>
+                                            <h6>Bulan Ini</h6>
+                                            <h4 class="mb-0">10<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+
                         <div class="row">
                                 <div class="col-md-12 col-xl-8">
                                     <div class="card">
