--- a/pimpinan/lihat-npwp.html
+++ b/pimpinan/lihat-npwp.html
@@ -237,26 +237,17 @@
                             <div class="col-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
+                                        <div class="float-left">
+
+                                            <a href="data-arsip-npwp.html" class="far fa-arrow-alt-circle-left fa-2x"></a>
+
                                         <div class="form-group row">
                                             <div class="col-sm-8">
+                                                <br>
                                                 <iframe src="contoh.pdf" width="1000" height="500"></iframe>
                                                 </div>
                                             </div>
-                                            <div class="form-group row">
-                                                <div class="col-sm-5">
-                                                </div>
-                                                <div class="col-sm-5">
-                                                </div>
-                                                <div class="col-md-10 offset-md-2">
-                                                    <div class="input-group mt-2">
-                                                        <div class="custom">
-                                                            <div class="input-group append">
-                                                                <a href="data-arsip-npwp.html">
-                                                                <button class="btn btn-danger btn-sm" type="button">Kembali</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                            
                                         <!-- <div class="input-group append">
                                             <button class="btn btn-primary" type="button">Upload</button>
                                             </div> -->
