--- a/resepsionis/dashboard.html
+++ b/resepsionis/dashboard.html
@@ -245,7 +245,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-sm-12 col-xl-3">
+                                <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-email-open"></i>
@@ -256,7 +256,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-12 col-xl-3">
+                                <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-file-document-box"></i>
@@ -267,7 +267,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-12 col-xl-3">
+                                <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-email"></i>
@@ -279,7 +279,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-12 col-xl-3">
+                                <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-email-open"></i>
