--- a/resepsionis/surat-masuk.html
+++ b/resepsionis/surat-masuk.html
@@ -243,7 +243,7 @@
                                         <!-- <div class="float-left"> -->
                                             <p>
                                                 <a href=form-add-surat-masuk.html>
-                                                    <button type="button" class="btn btn-info btn-sm" id="">Tambah Data</button>
+                                                    <button type="button" class="btn btn-info btn-sm float-right" id="">Tambah Data</button>
                                                 </a>
                                             </p>
                                         <form action="" method=""></form>
