--- a/pimpinan/data-arsip-mou.html
+++ b/pimpinan/data-arsip-mou.html
@@ -244,7 +244,7 @@
                                         <div class="container align-items-center">
                                             <p>
                                             <a href=form-add-data-dokumen.html>
-                                                <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
+                                                <button type="button" class="btn btn-info btn-sm float-right">Tambah Data</button></p>
                                             </a>
                                             <form action="" method=""></form>
                                         <div class="container align-items-center">
