--- a/pimpinan/jenis-dokumen.html
+++ b/pimpinan/jenis-dokumen.html
@@ -255,10 +255,19 @@
                                                                         <div id="datatable_length"
                                                                             class="dataTables_length d-flex align-items-center">
                                                                             <label class="mr-3 mb-0">
-                                                                            
+                                                                                Show
                                                                             </label>
-                                                                            <h6><font color="white">Disetujui</font></h6>
+                                                                            <select
+                                                                                class="custom-select custom-select-sm form-control form-control-sm"
+                                                                                name="datatable_length"
+                                                                                aria-controls="datatable">
+                                                                                <option value="10">10</option>
+                                                                                <option value="25">25</option>
+                                                                                <option value="50">50</option>
+                                                                                <option value="100">100</option>
+                                                                            </select>
                                                                             <label class="mr-3 mb-0">
+                                                                                entries
                                                                             </label>
                                                                         </div>
                                                                     </div>
