--- a/admin/laporan.html
+++ b/admin/laporan.html
@@ -91,20 +91,16 @@
                 </a>
             </li>
 
-            <li>
-                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
-            </li>
-
             <li class="has_sub">
+                                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i
+                                        class="mdi mdi-folder-account"></i><span> Data Pengguna </span>
+                                </a>
+                            </li>
+
+                            <li class="has_sub">
                            </li>
                             </a>
                         </li>
-
-                        <li>
-                                <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span>Laporan Disposi</span></a>
-                            </li>
-
         </ul>
     </div>
     <div class="clearfix"></div>
