--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -94,13 +94,14 @@
                             </a>
                         </li>
 
-                        <li>
-                                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
-                            </li>
-
-                            <li class="has_sub">
-                           </li>
-                            </a>
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="pengguna-pengguna.html">Pengguna</a></li>
+                                <li><a href="master-user.html">Master User</a></li>
+                            </ul>
                         </li>
 
                         <!-- <li>
