--- a/admin/form-add-data-divisi.html
+++ b/admin/form-add-data-divisi.html
@@ -87,19 +87,14 @@
                             </li>
 
                         <li class="has_sub">
-                           </li>
-                            </a>
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="pengguna-pengguna.html">Pengguna</a></li>
+                                <li><a href="master-user.html">Master User</a></li>
+                            </ul>
                         </li>
-
-                        <li>
-                                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
-                            </li>
-
-                            <li class="has_sub">
-                           </li>
-                            </a>
-                        </li>
-
                         <!-- <li>
                                 <a href="laporan.html" class="waves-effect waves-light"><i
                                     class="mdi mdi-library-books"></i><span> Laporan Disposisi </span></a>
@@ -265,7 +260,7 @@
                                         <div class="card-body">
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama Divisi</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="" id="example-text-input">
                                                 </div>
                                             </div>
