--- a/admin/form-add-data-laporan.html
+++ b/admin/form-add-data-laporan.html
@@ -83,19 +83,13 @@
                             </li>
 
                             <li class="has_sub">
-                                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-folder-account"></i><span> Data Pengguna </span>
-                                </a>
-                            </li>
-
-                            <li class="has_sub">
-                            </li>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="laporan.html" class="waves-effect waves-light"><i
-                            class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="pengguna-pengguna.html">Pengguna</a></li>
+                                <li><a href="master-user.html">Master User</a></li>
+                            </ul>
                         </li>
 
                     </ul>
