--- a/admin/form-edit-data-npwp.html
+++ b/admin/form-edit-data-npwp.html
@@ -87,17 +87,13 @@
                     </li>
 
                     <li class="has_sub">
-                    </li>
-                </a>
-            </li>
-
-            <li>
-                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
-            </li>
-
-                        <li class="has_sub">
-                           </li>
-                            </a>
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="pengguna-pengguna.html">Pengguna</a></li>
+                                <li><a href="master-user.html">Master User</a></li>
+                            </ul>
                         </li>
 
                     </ul>
