--- a/admin/update-jenis-arsip.html
+++ b/admin/update-jenis-arsip.html
@@ -76,6 +76,23 @@
                                 <li><a href="disposisi.html">Disposisi</a></li>
                             </ul>
                         </li>
+
+                        <li class="has_sub">
+                                    <a href="divisi-divisi.html" class="waves-effect waves-light"><i
+                                        class="mdi mdi-division-box"></i><span> Data Divisi </span>
+                                    </a>
+                                </li>
+
+                                <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="pengguna-pengguna.html">Pengguna</a></li>
+                                <li><a href="master-user.html">Master User</a></li>
+                            </ul>
+                        </li>
+
                     </div>
                     <div class="clearfix"></div>
                 </div> <!-- end sidebarinner -->
