--- a/admin/data-arsip-kontrak-kerja.html
+++ b/admin/data-arsip-kontrak-kerja.html
@@ -78,20 +78,16 @@
                             </li>
 
                             <li class="has_sub">
-                            </li>
-                        </a>
-                    </li>
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Divisi </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="jenis-divisi.html">Jenis Divisi</a></li>
+                                <li><a href="data-divisi.html">Data Divisi</a></li>
+                            </ul>
+                        </li>
 
-                    <li>
-                        <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
-                    </li>
-
-                    <li class="has_sub">
-                    </li>
-                </a>
-            </li>
-
-            <li class="has_sub">
+                        <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
                                     class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
@@ -269,7 +265,7 @@
                                             <a href=form-add-data-kontrak-kerja.html>
                                                 <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
                                             </a>
-<form action="" method=""></form>
+                                        <form action="" method=""></form>
                                         <div class="container align-items-center">
                                             <form action="">
                                                 <div class="row">
