--- a/admin/lihat-npwp.html
+++ b/admin/lihat-npwp.html
@@ -77,6 +77,16 @@
 
                             <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Divisi </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="jenis-divisi.html">Jenis Divisi</a></li>
+                                <li><a href="data-divisi.html">Data Divisi</a></li>
+                            </ul>
+                        </li>
+
+                            <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
                                     class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
