--- a/admin/surat-keluar.html
+++ b/admin/surat-keluar.html
@@ -78,14 +78,15 @@
                             </li>
 
                             <li class="has_sub">
-                            </li>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
-                    </li>
-
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Divisi </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="jenis-divisi.html">Jenis Divisi</a></li>
+                                <li><a href="data-divisi.html">Data Divisi</a></li>
+                            </ul>
+                        </li>
+                        
                     <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
                                     class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
