--- a/admin/update-profile.html
+++ b/admin/update-profile.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Update Profil</title>
+    <title>Arsipin - Update Profile</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -78,15 +78,16 @@
                         </li>
 
                         <li class="has_sub">
-                           </li>
-                            </a>
+                            <a href="javascript:void(0);" class="waves-effect waves-light"><i
+                                    class="mdi mdi-folder-account"></i><span> Data Divisi </span><span
+                                    class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="jenis-divisi.html">Jenis Divisi</a></li>
+                                <li><a href="data-divisi.html">Data Divisi</a></li>
+                            </ul>
                         </li>
 
-                        <li>
-                                <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
-                            </li>
-
-                        <li class="has_sub">
+                                <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
                                     class="mdi mdi-folder-account"></i><span> Data Pengguna </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
@@ -96,10 +97,6 @@
                             </ul>
                         </li>
 
-                        <!-- <li>
-                                <a href="laporan.html" class="waves-effect waves-light"><i
-                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi</span></a>
-                            </li> -->
                     </ul>
                 </div>
                 <div class="clearfix"></div>
@@ -260,35 +257,33 @@
                                         <div class="card-body">
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="Hana Larasati" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Email</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="hana@gmail.com" id="example-date-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-date-input" class="col-sm-2 col-form-label">Password</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="hana123" id="example-date-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Re-password</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="hana123" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Asal Kota</label>
-                                                <div class="col-sm-10">
+                                                <div class="col-sm-5">
                                                     <input class="form-control" type="text" value="Malang" id="example-text-input">
                                                 </div>
-                                            </div>
-                                            </div>
                                             </div>
                                            
                                                  <div class="col-md-10 offset-md-2">
